add power metrics
